# exocortex

./: Cargo.toml  flake.nix
app/: Cargo.toml
app/src/: app.rs  commandkey.rs  lib.rs  modaleditor.rs  pagewidget.rs  textframe.rs  viewer.rs
app/src/modaleditor/: editor.rs
exocortex/: Cargo.toml
exocortex/src/: app.rs  cliopts.rs  dbgexpr.rs  lib.rs  run.rs  textframe.rs
exocortex/src/textframe/: editor.rs  viewer.rs
githooks/: pre-commit
page/: Cargo.toml
page/help_docs/: help.md
page/help_docs/help/: welcome.md
page/src/: db.rs  entry.rs  error.rs  lib.rs  page.rs  path.rs
squeeze-frame/: Cargo.toml
squeeze-frame/src/: lib.rs
