[workspace]
members = ["app", "squeeze-frame", "page"]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
aliri_braid = "0.4.0"
clap = { version = "4.5.54", features = ["derive"] }
derive-new = "0.7.0"
derive_more = "2.1.1"
eframe = "0.33"
egui_commonmark = "0.22"
env_logger = "0.11.8"
exocortex-page = { version = "0.1.0", path = "page" }
exocortex-squeeze-frame = { version = "0.1.0", path = "squeeze-frame" }
include_dir = "0.7.4"
log = "0.4.29"
logging-options = "0.1.0"
thiserror = "2.0.17"
