[package]
name = "exocortex"
version = "0.1.0"
edition.workspace = true

[dependencies]
exocortex-page.workspace = true
clap.workspace = true
eframe.workspace = true
egui_commonmark.workspace = true
env_logger.workspace = true
log.workspace = true
logging-options.workspace = true
derive-new.workspace = true
