[package]
edition.workspace = true
name = "exocortex-page"
version = "0.1.0"

[dependencies]
aliri_braid.workspace = true
derive-new.workspace = true
derive_more = { workspace = true, features = ["from"] }
include_dir.workspace = true
strum = { workspace = true, features = ["derive"] }
thiserror.workspace = true
